TestSuite/errors/err0002.pas
var a : integer;
begin
a := 3.14;
end.